sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:13: error: type mismatch;
 found   : Unit
 required: Boolean
    if (n=0) {return}
         ^AlgCocktailSort3:18: error: type mismatch;
 found   : Unit
 required: Boolean
    if (m=0) {return}
         ^